all backend requests code was divided into repository, handler and service groups. Docker was fixed for work with new functional of D&D. Fixed type of task ids(integer for string UUID). Updated structure of project in txt document
